...

            <TextView
                android:id="@+id/presetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/presetSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
...

        <TextView
            android:id="@+id/equalizerTitle"
            android:gravity="center"
            android:layout_weight="10"
...

        <TableLayout
            android:id="@+id/equalizerTableLayout"
            android:layout_weight="30"
            android:layout_width="match_parent"
...

                <TextView
                    android:id="@+id/equalizerBandTitle1"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
...
                    android:textSize="14sp"/>
                <SeekBar
                    android:id="@+id/equalizerBandSeekbar1"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...

                <TextView
                    android:id="@+id/equalizerBandValue1"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

                <TextView
                    android:id="@+id/equalizerBandTitle2"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
...

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <TextView
                    android:id="@+id/equalizerBandValue2"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

                <TextView
                    android:id="@+id/equalizerBandTitle3"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
...

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar3"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...

                <TextView
                    android:id="@+id/equalizerBandValue3"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

                <TextView
                    android:id="@+id/equalizerBandTitle4"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
...

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar4"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...

                <TextView
                    android:id="@+id/equalizerBandValue4"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

                <TextView
                    android:id="@+id/equalizerBandTitle5"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_title_weight"
...

                <SeekBar
                    android:id="@+id/equalizerBandSeekbar5"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...

                <TextView
                    android:id="@+id/equalizerBandValue5"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

        <TableLayout
            android:id="@+id/volumeTableLayout"
            android:layout_weight="30"
            android:layout_width="match_parent"
...

                <SeekBar
                    android:id="@+id/settingsGlobalVolumeSeekbar"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...

                <TextView
                    android:id="@+id/settingsGlobalVolumeValue"
                    android:layout_weight="@dimen/equalizer_band_value_weight"
                    android:gravity="center"
...

                <SeekBar
                    android:id="@+id/settingsLeftRightVolumeRatioSeekbar"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/equalizer_band_seekbar_weight"
...
