...
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hearing_test">Hearing Test</string>
    <string name="title_microphone">Microphone</string>
    <string name="title_media_player">Media Player</string>
    <string name="title_settings">Settings</string>
    <string name="title_equalizer">Equalizer</string>
    <string name="title_volume">Volume</string>
    <string name="title_band_32">32</string>
    <string name="title_global">Global</string>
    <string name="title_left">Left\n(%d%%)</string>
    <string name="title_right">Right\n(%d%%)</string>
    <string name="title_preset">Preset</string>
    <string name="label_left_audio_balance">L</string>
    <string name="label_right_audio_balance">R</string>
    <string name="artist_title_placeholder">Artist</string>
    <string name="song_title_placeholder">Song Title</string>
    <string name="title_virtual_audiologist">Virtual Audiologist</string>
    <string name="caption_take_hearing_test">Take a new hearing test!</string>
...
    <string name="dialog_msg_rename_test_result">Please Enter a New Name for this Hearing Test Result</string>
    <string name="title_dialog_delete_test_result">Delete this Hearing Test Result</string>
    <string name="dialog_msg_delete_test_result">Are you sure? The result cannot be recovered after deleting</string>
    <string name="title_dialog_cancel_hearing_test">Cancel this Hearing Test?</string>
    <string name="dialog_msg_cancel_hearing_test">Are you sure? All progress will be lost</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="agreement_disclaimer">I have read and understand the above disclaimer.</string>
    <string name="continue_button">Continue</string>
    <string name="title_dialog_hearing_test_insructions">Hearing Test Instructions</string>
    <string name="dialog_msg_hearing_test_instructions">To collect accurate results, please set your phone volume to max and take the test in a quiet room.\n\nSounds will play at increasing volume levels each second. Please press the button when you hear a sound.</string>
    <string name="got_it">Got it!</string>
    <string name="label_hearing_test_left_ear">Left</string>
    <string name="label_hearing_test_right_ear">Right</string>
    <string name="button_revert">REVERT</string>
    <string name="button_apply">APPLY</string>
</resources>

