...
                    android:paddingEnd="@dimen/spacing_border"
                    android:paddingBottom="@dimen/spacing_border"
                    android:text="@string/title_disclaimer"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/agreement_disclaimer" />

                <Button
                    android:id="@+id/continueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/continue_button"
                    android:visibility="invisible" />
            </LinearLayout>
...
